# Ampel-ZTF

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  mypy.ini  pyproject.toml  renovate.json  setup.py
.github/workflows/: main.yml
ampel/lsst/view/: ZTFT2Tabulator.py
ampel/template/: ZTFLegacyChannelTemplate.py  ZTFProcessLocalAlerts.py
ampel/util/: Observatory.py
ampel/ztf/: legacy_utils.py
ampel/ztf/alert/: BTSForcedPhotometryAlertSupplier.py  HealpixPathSupplier.py  NeoWisePhotometryAlertSupplier.py  PhotoAlertPlotter.py  ZTFFPbotForcedPhotometryAlertSupplier.py  ZTFForcedPhotometryAlertSupplier.py  ZTFGeneralActiveAlertRegister.py  ZTFGeneralAlertRegister.py  ZTFIPACForcedPhotometryAlertSupplier.py  ZiAlertSupplier.py  ZiHealpixAlertSupplier.py  ZiTaggedAlertSupplier.py  calibrate_fps_fork.py
ampel/ztf/alert/load/: ZTFHealpixAlertLoader.py
ampel/ztf/base/: CatalogMatchFilter.py  CatalogMatchUnit.py
ampel/ztf/dev/: DevAlertConsumer.py  DevSkyPortalClient.py  ZTFAlert.py
ampel/ztf/ingest/: ZiArchiveMuxer.py  ZiCompilerOptions.py  ZiDataPointShaper.py  ZiMongoMuxer.py  tags.py
ampel/ztf/t0/: DecentFilter.py  T0HealpixPathProcessor.py  ZTFAlertStreamController.py
ampel/ztf/t0/load/: AllConsumingConsumer.py  UWAlertLoader.py  ZTFAlertArchiver.py  ZTFAlertArchiverV3.py  ZTFArchiveAlertLoader.py  avroutils.py  fetcherutils.py
ampel/ztf/t1/: ZiT1Combiner.py
ampel/ztf/t2/: T2CatalogMatch.py  T2LightCurveFeatures.py  T2LightCurveSummary.py
ampel/ztf/t3/: T3LegacyExtJournalAppender.py
ampel/ztf/t3/complement/: FritzReport.py  GROWTHMarshalReport.py  TNSNames.py  ZTFCutoutImages.py
ampel/ztf/t3/select/: T3AdHocStockSelector.py
ampel/ztf/t3/skyportal/: SkyPortalClient.py  SkyPortalPublisher.py
ampel/ztf/t4/: T4ZTFArchiveTokenGenerator.py
ampel/ztf/util/: ZTFIdMapper.py  ZTFNoisifiedIdMapper.py
ampel/ztf/view/: ZTFFPTabulator.py  ZTFT2Tabulator.py
conf/ampel-ztf/: ampel.yml
tests/: conftest.py  fixtures.py  test_Healipixloader.py  test_PhotoAlertPlotter.py  test_SkyPortalClient.py  test_T2CatalogMatch.py  test_T2LightCurveFeatures.py  test_ZTFAlertStreamController.py  test_ZTFLegacyChannelTemplate.py  test_ZiT0UpperLimitShaper.py  test_config.py  test_muxers.py
tests/__snapshots__/: test_T2LightCurveFeatures.ambr
tests/test-data/: testing-config.yaml
