[project]
name = "ampel-ztf"
version = "0.10.3a6"
description = "Zwicky Transient Facility support for the Ampel system"
requires-python = ">=3.10, <4"
authors = [
    { name = "Valery Brinnel" },
    { name = "Jakob van Santen", email = "jakob.van.santen@desy.de" },
    { name = "Sjoert van Velzen" },
    { name = "Jakob Nordin" }
]
maintainers = [
    { name = "Jakob van Santen", email = "jakob.van.santen@desy.de" },
]
license = "BSD-3-Clause"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Typing :: Typed",
]
dependencies = [
    "ampel-interface (>=0.10.4.post2,<0.11)",
]

[dependency-groups]
dev = [
    "pytest-ampel-core (>=0.10.0a3,<0.11)",
    "mypy (>=1.13,<2.0)",
]

[tool.poetry]
packages = [
    {include = "ampel"}
]
exclude = [
    "ampel/py.typed",
]
include = [
    'conf/*/*.json',
    'conf/*/*/*.json',
    'conf/*/*.yaml',
    'conf/*/*/*.yaml',
    'conf/*/*.yml',
    'conf/*/*/*.yml',
]

[project.urls]
homepage = "https://ampelproject.github.io"
repository = "https://github.com/AmpelAstro/Ampel-ZTF"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools >= 40.6.0", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--showlocals -ra"
filterwarnings = [
    "error",
    # pulled in by matplotlib
    "ignore:datetime.datetime.utcfromtimestamp\\(\\) is deprecated:DeprecationWarning:dateutil",
    # Expected `list[definition-ref]` but got `tuple` - serialized value may not be as expected
    "ignore:Pydantic serializer warnings:UserWarning",
    # UserWarning: Field name "job_sig" shadows an attribute in parent "AbsEventUnit"
    "ignore:Field name \".*\" shadows an attribute in parent:UserWarning",
]

[tool.mypy]
namespace_packages = true
packages = [
  "ampel"
]
plugins = [
  "pydantic.mypy",
]
show_error_codes = true
warn_unused_ignores = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "astropy.*",
  "confluent_kafka.*",
  #"ampel.ztf.t0.ArchiveUpdater",
  "pandas.*",
  #"matplotlib.*",
  "requests_toolbelt.*",
  "scipy.*",
  #"ztfquery",
  "healpy",
  "light_curve",
  "planobs.*"
]
ignore_missing_imports = true

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "UP",
    "B",
    "DTZ",
    # "T20",
    "PT",
    "RET",
    "SLF",
    "SIM",
    # # "ARG", # sometimes your arguments have to conform to an interface
    # # "ERA", # seems to prohibit all comments, that's bad
    "PL",
    "PERF",
    "RUF",
]
ignore = [
    "E741",    # ambiguous variable name
    "UP009",   # UTF-8 encoding declaration is unnecessary
    "E501",    # line too long
    "PLR09",   # too many (arguments|branches)
    "PLR2004", # Magic value used in comparison
    "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
               # fine for AmpelUnit, actually (ruff has a special case for pydantic)
]

[tool.ruff.lint.isort]
known-first-party = ["ampel"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["RUF018", "SLF001"]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true
